@@ -8,11 +8,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class PostService {
@@ -25,7 +25,6 @@ public class PostService {
     @Autowired
     private UserRepository userRepository;
 
-    @Transactional
     public Post createPost(Post post) {
         post.setTimestamp(LocalDateTime.now());
         return postRepository.save(post);
@@ -41,14 +40,13 @@ public class PostService {
                     return post;
                 }
                 Optional<User> user = userRepository.findById(post.getUserId());
-                post.setUserName(user.map(User::getName).orElse("Anonymous"));
-                return post;
+                post.setUserName(user.isPresent() ? user.get().getName() : "Anonymous");
             } catch (Exception e) {
                 logger.error("Error processing post {}: {}", post.getId(), e.getMessage(), e);
                 post.setUserName("Anonymous");
-                return post;
             }
-        }).toList();
+            return post;
+        }).collect(Collectors.toList());
     }
 
     public Optional<Post> getPostById(String id) {
@@ -61,7 +59,7 @@ public class PostService {
                     return;
                 }
                 Optional<User> user = userRepository.findById(p.getUserId());
-                p.setUserName(user.map(User::getName).orElse("Anonymous"));
+                p.setUserName(user.isPresent() ? user.get().getName() : "Anonymous");
             } catch (Exception e) {
                 logger.error("Error processing post {}: {}", p.getId(), e.getMessage(), e);
                 p.setUserName("Anonymous");
@@ -70,25 +68,20 @@ public class PostService {
         return post;
     }
 
-    @Transactional
     public Post updatePost(String id, Post updatedPost) {
         return postRepository.findById(id).map(post -> {
-            if (updatedPost.getTopic() != null) post.setTopic(updatedPost.getTopic());
-            if (updatedPost.getDescription() != null) post.setDescription(updatedPost.getDescription());
-            if (updatedPost.getMediaUrls() != null) post.setMediaUrls(updatedPost.getMediaUrls());
-            if (updatedPost.getMediaTypes() != null) post.setMediaTypes(updatedPost.getMediaTypes());
+            post.setTopic(updatedPost.getTopic());
+            post.setDescription(updatedPost.getDescription());
+            post.setMediaUrls(updatedPost.getMediaUrls());
+            post.setMediaTypes(updatedPost.getMediaTypes());
             post.setPrivate(updatedPost.isPrivate());
-            if (updatedPost.getTaggedFriends() != null) post.setTaggedFriends(updatedPost.getTaggedFriends());
-            if (updatedPost.getLocation() != null) post.setLocation(updatedPost.getLocation());
+            post.setTaggedFriends(updatedPost.getTaggedFriends());
+            post.setLocation(updatedPost.getLocation());
             return postRepository.save(post);
-        }).orElseThrow(() -> new RuntimeException("Post not found with id: " + id));
+        }).orElseThrow(() -> new RuntimeException("Post not found"));
     }
 
-    @Transactional
     public void deletePost(String id) {
-        if (!postRepository.existsById(id)) {
-            throw new RuntimeException("Post not found with id: " + id);
-        }
         postRepository.deleteById(id);
     }
 }
